<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddTaskFragment" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbAdd"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:layout_margin="@dimen/margin_min"
        android:hint="@string/Title_Hint_til"
        app:helperText="@string/required"
        app:endIconMode="clear_text"
        app:counterMaxLength="25"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_title"
        app:layout_constraintTop_toBottomOf="@+id/mtbAdd">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:layout_margin="@dimen/margin_min"
        android:hint="@string/Des_Hint_til"
        app:helperText="@string/required"
        app:endIconMode="clear_text"
        app:counterMaxLength="100"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_description"
        app:layout_constraintTop_toBottomOf="@+id/tilTitle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="@integer/etDes"
            android:minLines="@integer/etDes"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        android:src="@drawable/ic_back"
        app:layout_constraintVertical_bias="0.980"
        android:contentDescription="@string/btn_back_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        android:src="@drawable/ic_add_task"
        app:layout_constraintVertical_bias="0.980"
        android:contentDescription="@string/btn_save"/>
</androidx.constraintlayout.widget.ConstraintLayout>